--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@react-spring/web": "^9.7.2",
+    "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "gatsby": "^5.8.1",
     "gatsby-plugin-manifest": "^5.8.0",
