--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "gatsby": "^5.8.1",
+    "gatsby-plugin-image": "^3.9.0",
     "gatsby-plugin-manifest": "^5.8.0",
+    "gatsby-plugin-sharp": "^5.9.0",
     "gatsby-plugin-styled-components": "^6.8.0",
-    "gatsby-source-filesystem": "^5.8.0",
+    "gatsby-source-filesystem": "^5.9.0",
     "gatsby-transformer-remark": "^6.8.0",
+    "gatsby-transformer-sharp": "^5.9.0",
     "lodash": "^4.14.175",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
