--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@reach/skip-nav": "^0.18.0",
     "@react-spring/web": "^9.7.2",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
