--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "gatsby": "^5.8.1",
+    "gatsby-plugin-manifest": "^5.9.0",
     "gatsby-plugin-styled-components": "^6.8.0",
     "gatsby-source-filesystem": "^5.9.0",
     "gatsby-transformer-remark": "^6.8.0",
