--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby": "^5.8.1",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-manifest": "^5.9.0",
+    "gatsby-plugin-offline": "^6.9.0",
     "gatsby-plugin-styled-components": "^6.8.0",
     "gatsby-source-filesystem": "^5.9.0",
     "gatsby-transformer-remark": "^6.8.0",
